@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.14 2004/03/26 02:27:44 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2004/05/28 23:00:13 xtraeme Exp $
 
-DISTNAME=	libesmtp-1.0.1
-PKGREVISION=	2
+DISTNAME=	libesmtp-1.0.3r1
+PKGNAME=	${DISTNAME:S/r1//}
 CATEGORIES=	mail devel
 MASTER_SITES=	http://www.stafford.uklinux.net/libesmtp/ \
 		http://www.tobez.org/download/port-mirrors/mail/libesmtp/ \
